# bazel_invocation_analyzer

./: .bazelignore  .bazelrc  .gitignore  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  maven_install.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  feedback.md
.github/workflows/: ci.yml
analyzer/java/com/engflow/bazel/invocation/analyzer/bazelprofile/: BUILD  BazelEventsUtil.java  BazelProfile.java  BazelProfileConstants.java  BazelProfilePhase.java  ProfileThread.java  ThreadId.java
analyzer/java/com/engflow/bazel/invocation/analyzer/core/: BUILD  DataManager.java  DataProvider.java  Datum.java  DatumSupplier.java  DatumSupplierSpecification.java  DuplicateProviderException.java  InvalidProfileException.java  MissingInputException.java  NullDatumException.java  SuggestionProvider.java
analyzer/java/com/engflow/bazel/invocation/analyzer/dataproviders/: ActionStats.java  ActionStatsDataProvider.java  BUILD  BazelPhaseDescription.java  BazelPhaseDescriptions.java  BazelPhasesDataProvider.java  BazelVersion.java  BazelVersionDataProvider.java  Bottleneck.java  CachingAndExecutionMetrics.java  CachingAndExecutionMetricsDataProvider.java  CriticalPathDuration.java  CriticalPathDurationDataProvider.java  DataProviderUtil.java  EstimatedCores.java  EstimatedCoresAvailable.java  EstimatedCoresDataProvider.java  EstimatedCoresUsed.java  EstimatedJobsFlagValue.java  FlagValueDataProvider.java  FlagValueExperimentalProfileIncludeTargetLabel.java  GarbageCollectionStats.java  GarbageCollectionStatsDataProvider.java  LocalActions.java  LocalActionsDataProvider.java  MergedEventsPresent.java  MergedEventsPresentDataProvider.java  RemoteCacheMetrics.java  RemoteCacheMetricsDataProvider.java  SkymeldUsed.java  SkymeldUsedDataProvider.java  TotalDuration.java
analyzer/java/com/engflow/bazel/invocation/analyzer/suggestionproviders/: BUILD  BottleneckSuggestionProvider.java  BuildWithoutTheBytesSuggestionProvider.java  CriticalPathNotDominantSuggestionProvider.java  GarbageCollectionSuggestionProvider.java  IncompleteProfileSuggestionProvider.java  InvestigateRemoteCacheMissesSuggestionProvider.java  JobsSuggestionProvider.java  LocalActionsWithRemoteExecutionSuggestionProvider.java  MergedEventsSuggestionProvider.java  NegligiblePhaseSuggestionProvider.java  NoCacheActionsSuggestionProvider.java  QueuingSuggestionProvider.java  SuggestionProviderBase.java  SuggestionProviderUtil.java  UseRemoteCachingSuggestionProvider.java  UseSkymeldSuggestionProvider.java
analyzer/java/com/engflow/bazel/invocation/analyzer/time/: BUILD  DurationUtil.java  Range.java  TimeUtil.java  Timestamp.java
analyzer/javatests/com/engflow/bazel/invocation/analyzer/: BUILD  EventThreadBuilder.java  ProfileTestBase.java  UnitTestBase.java  WriteBazelProfile.java
analyzer/javatests/com/engflow/bazel/invocation/analyzer/core/: BUILD  (+4 more)
cli/: BUILD
cli/java/com/engflow/bazel/invocation/analyzer/: BUILD  Main.java
conditions/: BUILD
docs/: adding-suggestions.md  library-architecture.md
infra/: BUILD  lint.sh  setup.sh
infra/git/hooks/: pre-commit
proto/: BUILD  bazel_invocation_analyzer.proto
(+95 files in other folders)
