"""Bazel build and test dependencies."""

# =========================================
# Bazel module dependencies
# =========================================

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.3.3")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

# =========================================
# Java dependencies
# =========================================
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.10.1",
        "com.google.errorprone:error_prone_annotations:2.23.0",
        "com.google.googlejavaformat:google-java-format:1.18.1",
        "com.google.guava:failureaccess:1.0.2",
        "com.google.guava:guava:32.1.3-jre",
        "com.google.j2objc:j2objc-annotations:2.8",
        "com.google.truth:truth:1.1.5",
        "com.google.truth.extensions:truth-java8-extension:1.1.5",
        "commons-cli:commons-cli:1.6.0",
        "junit:junit:4.13.2",
        "net.bytebuddy:byte-buddy-agent:1.14.10",
        "net.bytebuddy:byte-buddy:1.14.10",
        "org.hamcrest:hamcrest-core:2.2",
        "org.mockito:mockito-core:5.7.0",
        "org.objenesis:objenesis:3.3",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
