module(
    name = "com_engflow_bazel_invocation_analyzer",
)

"""Bazel build and test dependencies."""

# =========================================
# Bazel module dependencies
# =========================================

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.2")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "27.2")

# =========================================
# Java dependencies
# =========================================
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.11.0",
        "com.google.guava:failureaccess:1.0.2",
        "com.google.guava:guava:33.2.1-jre",
        "commons-cli:commons-cli:1.8.0",

        # For Tests
        "com.google.googlejavaformat:google-java-format:1.22.0",
        "com.google.truth:truth:1.4.3",
        "com.google.truth.extensions:truth-java8-extension:1.4.3",
        "junit:junit:4.13.2",
        "org.mockito:mockito-core:5.12.0",
    ],
    # When updating versions, run `REPIN=1 bazel run @maven//:pin`
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
